--- a/_config.yml
+++ b/_config.yml
@@ -118,10 +118,10 @@ index_with_subtitle: false
 menu:
   home: /
   categories: /categories/
-  about: /about/
   archives: /archives/
   tags: /tags/
-  sitemap: /sitemap.xml
+  about: /about/
+  #sitemap: /sitemap.xml
   #commonweal: /404.html
 
 
@@ -263,8 +263,8 @@ sidebar:
   #  - always  expand for all pages automatically
   #  - hide    expand only when click on the sidebar toggle icon.
   #  - remove  Totally remove sidebar including sidebar toggle.
-  #display: post
-  display: always
+  display: post
+  #display: always
   #display: hide
   #display: remove
 
