--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 title: On the way.
 subtitle:
 description:
-author: Shaoqiu&Xiaowan
+author: Shaoqiu
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
 language: zh-Hans
 date_format: '%Y-%m-%d'
@@ -83,7 +83,7 @@ keywords: "Jekyll, NexT"
 # Set rss to false to disable feed link.
 # Leave rss as empty to use site's feed link.
 # Set rss to specific value if you have burned your feed already.
-rss:
+# rss:
 
 # Specify the date when the site was setup
 #since: 2015
